<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_details"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:id="@+id/txtEnterDetails"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/training_name"
        android:layout_below="@+id/txtEnterDetails"
        android:id="@+id/txtTrainingName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/how_much_time"
        android:layout_below="@+id/txtTrainingName"
        android:id="@+id/txtPeriod"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/edtMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPeriod"
        android:layout_centerHorizontal="true"
        android:textColorHint="#757575"
        android:hint="@string/minutes"
        android:minHeight="48dp"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_day_of_week"
        android:layout_below="@+id/edtMinute"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtSelectDay"/>

    <Spinner
        android:id="@+id/spnDayOfWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSelectDay"
        android:layout_centerHorizontal="true"
        android:entries="@array/days_of_the_week"
        android:minHeight="48dp" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spnDayOfWeek"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss"
            android:id="@+id/btnDismiss"/>

        <Button
            android:enabled="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/btnAdd"
            android:layout_marginStart="30dp"
            android:layout_toRightOf="@+id/btnDismiss"/>

    </RelativeLayout>


</RelativeLayout>