<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingActivity">

    <Button
        android:id="@+id/btnAddToPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/add_to_plan"
        android:textSize="16sp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnAddToPlan"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtTrainingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/training_name"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgTrainingImg"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/txtTrainingName"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/txtLongDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgTrainingImg"
                android:layout_marginTop="10dp"
                android:text="@string/longDesc"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>